# mujoco_inverted_pendulum

./: .gitignore  CMakeLists.txt  README.md
inverted_pendulum_simulator/: CMakeLists.txt  package.xml
inverted_pendulum_simulator/include/control/: controller_base.h  mpc_controller.h  pid_controller.h
inverted_pendulum_simulator/include/inverted_pendulum_simulator/: inverted_pendulum.h  mujoco_viewer.h
inverted_pendulum_simulator/include/mpc_solver/: mpc_solver.h  mpc_solver.tpp
inverted_pendulum_simulator/src/: inverted_pendulum.cpp  mpc_controller.cpp  mujoco_view.cpp  pid_controller.cpp  simulator.cpp
inverted_pendulum_simulator/urdf/: inverted_pendulum.xml
inverted_pendulum_simulator/urdf/meshes/: base_link.stl  fl_wheel.stl  fr_wheel.stl  pendulum.stl
